Revision history for Perl extension MooseX-Getopt

{{$NEXT}}
 - fix broken tests on win32 with file comparisons
 - allow configfiles called "0"

0.53      2013-02-05 09:59:00 PST-0800
 - properly indicate optional dependency in tests using
   MooseX::ConfigFromFile

0.52      2013-02-02 19:01:25 PST-0800
 - tests converted from using Path::Class to Path::Tiny

0.51      2013-01-27 09:38:11 PST-0800
 - missing test prereqs now declared (thanks for the automated reports, David
   Cantrell!)

0.50      2012-12-27 00:20:56 PST-0800
 - unbreak Catalyst::Runtime tests (etc) by keeping _getopt_full_usage in the
   callstack. (RT#82249)

0.49      2012-12-26 10:13:41 PST-0800
 - silence a warning in tests if the user does not have YAML::XS installed
   (thanks for the report, Getty!)
 - fix off-by-one issues in test plans if optional requirements are not met

0.48      2012-12-23 18:08:04 PST-0800
 - documentation and tests amended to prefer usage of 'trait' over 'metaclass'
   as much as possible
 - print_usage_text() exposed as a public method, to make it easier for
   consuming classes to modify the behaviour when usage text is printed

0.47      2012-08-30 16:37:59 PDT-0700
 - re-release to remove double $VERSION declarations

0.46      2012-08-30 15:17:28 PDT-0700
 - -h is also treated as a --help option

0.45      2012-05-13 09:49:58 PDT-0700
 - use Path::Class in test to avoid test failures on MSWin32 with filename
   construction

0.44      2012-05-11 10:44:48 PDT-0700
 - now respecting value of configfile passed to the constructor, when used in
   conjunction with MooseX::ConfigFromFile. (Karen Etheridge)

0.43      2012-04-29 09:35:52 PDT-0700
 - re-release as non-trial.

0.42-TRIAL 2012-04-15 09:13:05 PDT-0700
 - reformatted the Changes file, with the help of CPAN::Changes, to something
   a little more standard.
 - more release-only tests added

0.41-TRIAL 2012-04-14 18:36:00 PDT-0700
 - Now bails with exit status 0, rather than dying, when printing